--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <header class="container">
             <nav class="main-nav">
-                <img class="logo" alt="логотип GllacyShop - Глейси" src="./logo.svg" width="154" height="62">
+                <img class="logo" alt="логотип GllacyShop - Глейси" src="./Logo.svg" width="154" height="62">
                 <ul class="main-links">
                     <li><a href="#">Каталог</a></li>
                     <li><a href="#">Доставка и оплата</a></a></li>
