--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </header>
         <div class="slider container">
-            <div class="slide" style="background-image: url(./bg.png)" data-bgcolor="#849D8F">
+            <div class="slide active" style="background-image: url(./bg.png)" data-bgcolor="#849D8F">
                 <h2>Крем-брюле и пломбир<br>с малиновым джемом</h2>
                 <button class="btn">Давайте оба!</button>
             </div>
@@ -35,7 +35,7 @@
                 <h2>Шоколадный пломбир<br>и лимонный сорбет</h2>
                 <button class="btn">Давайте оба!</button>
             </div>
-            <div class="slide active" style="background-image: url(./slide3.png)" data-bgcolor="#9D8B84">
+            <div class="slide" style="background-image: url(./slide3.png)" data-bgcolor="#9D8B84">
                 <h2>Пломбир с помадкой<br>и клубничный щербет</h2>
                 <button class="btn">Давайте оба!</button>
             </div>
